// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepIndexPattern step 1 renders errors when input is invalid 1`] = `
<Header
  characterList="\\\\, /, ?, \\", <, >, |"
  data-test-subj="createIndexPatternStep1Header"
  errors={
    Array [
      "Your input contains invalid characters or spaces. Please omit: \\\\, /, ?, \\", <, >, |",
    ]
  }
  goToNextStep={[Function]}
  isInputInvalid={true}
  isNextStepDisabled={true}
  onQueryChanged={[Function]}
  query="?"
/>
`;

exports[`StepIndexPattern step 1 renders indices which match the initial query 1`] = `
<IndicesList
  data-test-subj="createIndexPatternStep1IndicesList"
  indices={
    Array [
      Object {
        "name": "kibana",
      },
    ]
  }
  query="kibana"
/>
`;

exports[`StepIndexPattern step 1 renders matching indices when input is valid 1`] = `
<IndicesList
  data-test-subj="createIndexPatternStep1IndicesList"
  indices={
    Array [
      Object {
        "name": "kibana",
      },
    ]
  }
  query="k*"
/>
`;

exports[`StepIndexPattern step 1 renders the loading state 1`] = `
<LoadingIndices
  data-test-subj="createIndexPatternStep1Loading"
/>
`;
